--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>응급의학과 전문의 종합 자산관리 대시보드</title>
-    <!-- Favicon 오류 완전 차단 -->
+    <!-- Favicon 오류 완전 차단 연습->
     <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Crect width='32' height='32' rx='6' fill='%23667eea'/%3E%3Cpath d='M16 8c0-.553-.447-1-1-1h-2c-.553 0-1 .447-1 1v4H8c-.553 0-1 .447-1 1v2c0 .553.447 1 1 1h4v4c0 .553.447 1 1 1h2c.553 0 1-.447 1-1v-4h4c.553 0 1-.447 1-1v-2c0-.553-.447-1-1-1h-4V8z' fill='white'/%3E%3Ccircle cx='24' cy='24' r='3' fill='%2328a745'/%3E%3C/svg%3E">
     <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
     <style>
